--- a/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -195,7 +195,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=404.000
-WindowSize=X=1282.000 Y=722.000
+WindowSize=X=1284.000 Y=724.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1242,4 +1242,8 @@ HierarchicalLODOutliner.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
