--- a/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1238,6 +1238,12 @@ SubobjectEditor.TimeStamp=2024.03.05-20.09.54
 SubobjectEditor.LastCompileMethod=Unknown
 HierarchicalLODOutliner.TimeStamp=2024.03.05-20.09.47
 HierarchicalLODOutliner.LastCompileMethod=Unknown
+SQLiteCore.TimeStamp=2023.07.18-14.57.56
+SQLiteCore.LastCompileMethod=Unknown
+SQLiteSupport.TimeStamp=2023.07.18-14.57.59
+SQLiteSupport.LastCompileMethod=Unknown
+DatabaseSupport.TimeStamp=2023.07.18-14.57.56
+DatabaseSupport.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
