--- a/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SoulSeekers/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -173,6 +173,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -1244,8 +1246,87 @@ SQLiteSupport.TimeStamp=2023.07.18-14.57.59
 SQLiteSupport.LastCompileMethod=Unknown
 DatabaseSupport.TimeStamp=2023.07.18-14.57.56
 DatabaseSupport.LastCompileMethod=Unknown
+Water.TimeStamp=2023.07.18-14.57.02
+Water.LastCompileMethod=Unknown
+BlueprintMaterialTextureNodes.TimeStamp=2023.07.18-14.52.22
+BlueprintMaterialTextureNodes.LastCompileMethod=Unknown
+Landmass.TimeStamp=2023.07.18-14.52.47
+Landmass.LastCompileMethod=Unknown
+LandmassEditor.TimeStamp=2023.07.18-14.52.47
+LandmassEditor.LastCompileMethod=Unknown
+WaterEditor.TimeStamp=2023.07.18-14.57.02
+WaterEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
+
+[LandscapeEdit]
+PaintToolStrength=0.300000012
+PaintBrushRadius=2048
+PaintBrushFalloff=0.5
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200
+bUseFlattenTarget=False
+FlattenTarget=0
+TerraceSmooth=9.99999975e-05
+TerraceInterval=1
+RampWidth=2000
+RampSideFalloff=0.400000006
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[MessageLog]
+LastLogListing=LoadErrors
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.PathTracing=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Physics=True
+TextRenderActor.Networking=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.LandscapeEditor=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Edit Layers=True
+LandscapeEditorObject.Edit Layer Blueprint Brushes=True
+LandscapeEditorObject.Target Layers=True
 
